--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: eks-devops
-          image: 328916801733.dkr.ecr.ap-southeast-2.amazonaws.com/gitops-demo:2022-12-06.07.19.15.cd6b3c10
+          image: 659304862788.dkr.ecr.us-east-1.amazonaws.com/ecr-repo-random-123456:e2b567f478bda521a406ae3fa8bb150061502a0b
           ports:
             - containerPort: 80
