--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -1,21 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: eks-devops-deployment
-  labels:
-    app: eks-devops
+  name: nginx-deployment
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: eks-devops
+      app: nginx
+  replicas: 2 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
-        app: eks-devops
+        app: nginx
     spec:
       containers:
-        - name: eks-devops
-          image:202169348149.dkr.ecr.us-east-1.amazonaws.com/ecr-repo-random-123456:2022-12-08.07.01.53.97bb09ca
-          ports:
-            - containerPort: 80
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
