--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: app-deployment
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: app-deployment
   replicas: 2 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
-        app: nginx
+        app: app-deployment
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: app-deployment
+        image: 328916801733.dkr.ecr.us-east-1.amazonaws.com/ecr-repo-random-123456:2022-12-08.06.07.33.c662c88e
         ports:
         - containerPort: 80
