--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -1,16 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1-nginx-nodeport-service
+  name: nginx-svc
   labels:
-    app: app1-nginx
-  annotations:
-#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
-#    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
+    env: dev
 spec:
-  type: NodePort
-  selector:
-    app: app1-nginx
+  type: LoadBalancer
   ports:
-    - port: 80
-      targetPort: 80
+  - port: 80
+  selector:
+    env: dev
+
